--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,14 @@
             <FrameLayout
                 android:id="@+id/content_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+
+                <com.felipecsl.asymmetricgridview.library.widget.AsymmetricGridView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/movieList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </FrameLayout>
 
         </LinearLayout>
 
